--- a/auth/package.json
+++ b/auth/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "tsc -w & nodemon dist/app.js",
     "lint": "eslint . --ext .ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lau Xin Wei",
